[package]
name = "kip-blog"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "kip-blog"
path = "src/main.rs"

[[bin]]
name = "markd"
path = "src/bin/markd.rs"

[[bin]]
name = "init"
path = "src/bin/init.rs"

[profile.release]
lto=true
codegen-units = 1
opt-level= 's'

[dependencies]
askama = {version="0.12.0", features=["markdown"]}
tokio = {version="1.28.0", features = ["macros", "rt-multi-thread"]}
axum =  "0.6.17"
kip-sql = "0.0.1-alpha.3"
tower-http = {version = "0.4", features=["full"]}
itertools = "0.10"
chrono = "0.4.26"
uuid = "1.4.1"
